# selection-ai-assistant

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
selection-ai-assistant/: index.html  package-lock.json  package.json  vite.config.ts
selection-ai-assistant/docs/spikes/: windows-selection-spike.md
selection-ai-assistant/docs/validation/: p0-validation.md
selection-ai-assistant/src/: App.tsx  styles.css
selection-ai-assistant/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
selection-ai-assistant/src-tauri/capabilities/: ai-panel.json  default.json  floating-button.json  main.json  replacement-preset.json  screenshot-overlay.json  source-text.json  translate-result.json
selection-ai-assistant/src-tauri/permissions/autogenerated/: cancel_screenshot_translate.toml  confirm_main_window_close.toml  delete_provider.toml  focus_floating_button.toml  get_latest_panel_context.toml  get_latest_source_text_context.toml  get_platform_capabilities.toml  get_runtime_preferences.toml  hide_ai_panel.toml  hide_floating_button.toml  hide_replacement_preset_panel.toml  hide_source_text_window.toml  hide_translate_result.toml  list_provider_models.toml  open_panel_for_current_selection.toml  open_panel_for_text.toml  replace_selected_text.toml  run_ai_action.toml  run_ai_follow_up.toml  run_screenshot_translate.toml  save_app_behavior_config.toml  save_output_target_preferences.toml  save_provider_config.toml  set_default_provider.toml  set_replacement_preset_panel_expanded.toml  show_ai_panel.toml  show_floating_button.toml  show_replacement_preset_panel.toml  show_screenshot_overlay.toml  show_source_text_window.toml  show_translate_result.toml  test_provider_connection.toml
selection-ai-assistant/src-tauri/src/: app_lifecycle.rs  app_state.rs  lib.rs  main.rs  types.rs
selection-ai-assistant/src-tauri/src/ai/: action_classifier.rs  anthropic.rs  gemini.rs  mod.rs  openai_compatible.rs
selection-ai-assistant/src-tauri/src/commands/: access.rs  ai.rs  config.rs  mod.rs  panel.rs  platform.rs  screenshot.rs  selection.rs
selection-ai-assistant/src-tauri/src/config/: ipc.rs  mod.rs  store.rs
selection-ai-assistant/src-tauri/src/floating_window/: mod.rs  positioning.rs
selection-ai-assistant/src-tauri/src/input_monitor/: events.rs  mod.rs
selection-ai-assistant/src-tauri/src/platform/: mod.rs  stub.rs  windows.rs
selection-ai-assistant/src-tauri/src/security/: secrets.rs
selection-ai-assistant/src-tauri/src/selection/: clipboard_reader.rs  controller.rs  mod.rs  types.rs  uia_reader.rs
selection-ai-assistant/src-tauri/tests/: action_classifier_tests.rs  ai_provider_command_tests.rs  app_lifecycle_tests.rs  clipboard_reader_tests.rs  config_command_tests.rs  config_tests.rs  input_monitor_tests.rs  openai_client_tests.rs  platform_tests.rs  positioning_tests.rs  prompt_tests.rs  selection_command_tests.rs  selection_controller_tests.rs  uia_reader_tests.rs
selection-ai-assistant/src/__tests__/: MarkdownPreview.test.tsx  (+8 more)
(+15 files in other folders)
